--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,9 +8,14 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
+steps:
+  - name: Grant execute permission for gradlew
+    run: chmod +x gradlew
+
 install:
   # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
   - java -jar ./artifacts/app-mbank.jar &
 
 build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+
