--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,21 +1,20 @@
 image: Ubuntu  # образ для сборки
 
-stack: jdk 11  # версия JDK
+stack: jdk 11
 
 branches:
   only:
-    - main  # ветка git
+    - main
 
-build: off  # будем использовать свой скрипт сборки
+build: off
 
 steps:
   - name: Grant execute permission for gradlew
     run: chmod +x gradlew
 
 install:
-  # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
   - java -jar ./artifacts/app-mbank.jar &
 
 build_script:
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew test --info
 
